--- a/assets/stylesheets/source/settings/mixins/helpers/_shape-size-stripper.scss
+++ b/assets/stylesheets/source/settings/mixins/helpers/_shape-size-stripper.scss
@@ -1,3 +1,9 @@
+
+// Title:      Shape size stripper
+// Version:    3.2.0-beta.2
+// Author:     Bourbon
+// Source:     https://github.com/thoughtbot/bourbon
+
 @function _shape-size-stripper($shape-size) {
   $shape-size-spec: null;
   @each $value in $shape-size {
