--- a/assets/stylesheets/source/settings/mixins/helpers/_gradient-positions-parser.scss
+++ b/assets/stylesheets/source/settings/mixins/helpers/_gradient-positions-parser.scss
@@ -1,3 +1,10 @@
+
+// Title:      Gradient position parse
+// Version:    3.2.0-beta.2
+// Author:     Bourbon
+// Source:     https://github.com/thoughtbot/bourbon
+
+
 @function _gradient-positions-parser($gradient-type, $gradient-positions) {
   @if $gradient-positions
   and ($gradient-type == linear)
