Add mixin section for custom mixins

--- a/assets/stylesheets/source/settings/mixins/mixins.scss
+++ b/assets/stylesheets/source/settings/mixins/mixins.scss
@@ -10,5 +10,8 @@
 // a new `.scss` file and import it below. All imported files should begin with
 // an underscore.
 
+// Libraries
 @import "bourbon/bourbon";
 @import "neat/neat";
+
+// Mixins, etc.
