--- a/assets/stylesheets/source/settings/mixins/mixins.scss
+++ b/assets/stylesheets/source/settings/mixins/mixins.scss
@@ -16,6 +16,7 @@
 
 // Functions
 @import "functions/font-unit";
-@import "functions/type-scale";
+@import "functions/strip-unit";
 
 // Mixins
+@import "font-size";
