--- a/assets/stylesheets/source/settings/mixins/bourbon/addons/_rem.scss
+++ b/assets/stylesheets/source/settings/mixins/bourbon/addons/_rem.scss
@@ -19,7 +19,8 @@
 
   $pixel_values: ();
   $rem_values: ();
-  @each $value in $pxval {
+
+  @each $value in $size {
     $pixel_value: $value * 1px;
     $pixel_values: append($pixel_values, $pixel_value);
 
