--- a/assets/stylesheets/source/settings/_type.scss
+++ b/assets/stylesheets/source/settings/_type.scss
@@ -11,12 +11,9 @@
 // Font families
 // ----------------------------------------------------------------------------
 
-$font-family-sans:       $helvetica !default;
-$font-family-serif:      $georgia !default;
-$font-family-monospace:  $monospace !default;
-
-$font-family-base:       $font-family-sans !default;
-$font-family-heading:    $font-family-base !default;
+$font-family-base:     $helvetica !default;
+$font-family-heading:  $helvetica !default;
+$font-family-code:     $monospace !default;
 
 // Custom fonts
 //
@@ -35,7 +32,7 @@ $font-family-heading:    $font-family-base !default;
 // The unit you set here (px, em, rem) will be your default type unit
 
 $em-base:         16px;
-$font-size-base:  1rem;
+$font-size-base:  1em; // px, em, or rem
 
 $font-size-xl:    modular-scale($font-size-base,  3, $perfect-fourth) !default;
 $font-size-lg:    modular-scale($font-size-base,  2, $perfect-fourth) !default;
@@ -52,6 +49,8 @@ $line-height-computed:  font-unit($font-size-base * $line-height-base) !default;
 
 // Weights
 // ----------------------------------------------------------------------------
+
+$font-weight-base:    400 !default;
 
 $font-weight-thin:    100 !default;
 $font-weight-light:   300 !default;
