--- a/assets/stylesheets/source/settings/mixins/_font-size.scss
+++ b/assets/stylesheets/source/settings/mixins/_font-size.scss
@@ -4,7 +4,8 @@
 // Author:     Andy Smith
 // Source:     http://github/com/andyra/proto
 
-// This is just an alias for the rem mixin for better readability
+// This is just an alias for the rem mixin for better readability.
+// The units here could be in absolute or relative units.
 
 @mixin font-size($size) {
   @if unit($font-size-base) == "rem" {
