--- a/assets/stylesheets/source/settings/mixins/_padding.scss
+++ b/assets/stylesheets/source/settings/mixins/_padding.scss
@@ -4,7 +4,9 @@
 // Author:     Andy Smith
 // Source:     http://github/com/andyra/proto
 
-// This is just an alias for the rem mixin for better readability
+// This is just an alias for the rem mixin for better readability.
+// We need the rem mixin to be able to handle px, em, and rem accurately.
+// Currently, Bourbon's mixin converts everything to px or rem.
 
 @mixin padding($size) {
   @include rem(padding, $size);
