--- a/assets/stylesheets/source/settings/_debug.scss
+++ b/assets/stylesheets/source/settings/_debug.scss
@@ -6,18 +6,21 @@
 
 // Debug mode will visually highlight any potential markup/accessibility quirks
 // in the browser. Set to `true` or `false`.
-$debug-mode:                 false !default;
+$debug-mode:                true !default;
 
 // Visual grid
 // Set $visual-grid to true to make sure your site is lining up as expected
-$visual-grid:                false;
-$visual-grid-color:          #eee;
-$visual-grid-index:          back;
-$visual-grid-opacity:        0.4;
+$visual-grid:               false !default;
+$visual-grid-color:         $gray-light !default;
+$visual-grid-index:         back !default;
+$visual-grid-opacity:       0.5 !default;
 
+// Visual baseline
 // Displays a baseline grid to make sure the vertical rhythm is consistent.
-$visual-baseline:            false !default;
+$visual-baseline:           true !default;
+$visual-baseline-color:     lightgreen !default;
 
 // Show a ruler at the top of the page to help visualize breakpoint presets.
 // They will be automatically updated based on your settings in breakpoints.scss
+// @todo: create breakpoint ruler
 $breakpoint-ruler:           false !default;
