--- a/assets/stylesheets/source/styles.scss
+++ b/assets/stylesheets/source/styles.scss
@@ -27,5 +27,5 @@
 h1 {
   // padding: type-unit($font-size-base * $line-height-base);
   // @include rem(padding, $line-height-computed);
-  @include rem(padding, 2rem); // Note: this doesn't work
+  // @include rem(padding, 2rem); // Note: this doesn't work
 }
