--- a/assets/stylesheets/source/settings/mixins/_visual-baseline.scss
+++ b/assets/stylesheets/source/settings/mixins/_visual-baseline.scss
@@ -11,8 +11,14 @@
 
 @if $visual-baseline == true {
   body {
-    @include linear-gradient(top, rgba(0,0,0,0) 95%, $visual-baseline-color 100%);
-    background-size: 100% $line-height-computed;
-    background-position: -5px; // Use to offset and center your grid
+    @if $visual-baseline-image {
+      background-image: url($visual-baseline-image);
+      background-repeat: repeat;
+    }
+    @else {
+      @include linear-gradient(top, rgba(0,0,0,0) 95%, $visual-baseline-color 100%);
+      background-size: 100% $line-height-computed;
+      background-position: -5px; // Use to offset and center your grid
+    }
   }
 }
