--- a/assets/stylesheets/source/settings/mixins/_visual-baseline.scss
+++ b/assets/stylesheets/source/settings/mixins/_visual-baseline.scss
@@ -12,13 +12,12 @@
 @if $visual-baseline == true {
   body {
     @if $visual-baseline-image {
-      background-image: url($visual-baseline-image);
-      background-repeat: repeat;
+      background: url($visual-baseline-image) repeat top left;
     }
     @else {
       @include linear-gradient(top, rgba(0,0,0,0) 95%, $visual-baseline-color 100%);
       background-size: 100% $line-height-computed;
-      background-position: -5px; // Use to offset and center your grid
+      background-position: 0; // Use to offset and center your grid
     }
   }
 }
