--- a/assets/stylesheets/source/base/_scaffolding.scss
+++ b/assets/stylesheets/source/base/_scaffolding.scss
@@ -15,7 +15,9 @@
 
 // Body reset
 html {
-  // Set the base HTML font size  in %
+  // IE 6 refuses to resize fonts set in pixels and it weirdly resizes fonts
+  // whose root is set in ems. So we set the root font size in percentages of
+  // the default font size.
   font-size: strip-unit($em-base) / 16 * 100%;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
