--- a/assets/stylesheets/source/settings/_type.scss
+++ b/assets/stylesheets/source/settings/_type.scss
@@ -30,10 +30,12 @@ $font-family-code:     $monospace !default;
 // $em-base: the document's base font size in pixels.
 // $font-size-base: the default size for body text (paragraphs, lists, etc.).
 // The unit you set here (px, em, rem) will be your default type unit
+// $rem-fallback: whether or not to include px fallback for rem (IE8 support)
+// @todo: make a rem-fallback in the mixin
 
 $em-base:         18px;
-$font-size-base:  1rem;
-$rem-fallback:    true;
+$font-size-base:  1rem !default;
+$rem-fallback:    true !default;
 
 $font-size-xxl:   modular-scale($font-size-base,  4, $perfect-fourth) !default;
 $font-size-xl:    modular-scale($font-size-base,  3, $perfect-fourth) !default;
@@ -47,15 +49,13 @@ $font-size-xs:    modular-scale($font-size-base, -2, $perfect-fourth) !default;
 // ----------------------------------------------------------------------------
 
 // @todo: use something other than $line-height-computed
-// leading-base, leading-unitless
+// leading-base, leading-unitless, line-height / line-height-base
 
 $line-height-base:      1.5 !default; // Unitless number
 $line-height-computed:  $font-size-base * $line-height-base !default;
 
 // Weights
 // ----------------------------------------------------------------------------
-
-$font-weight-base:    400 !default;
 
 $font-weight-thin:    100 !default;
 $font-weight-light:   300 !default;
@@ -64,41 +64,24 @@ $font-weight-medium:  500 !default;
 $font-weight-bold:    700 !default;
 $font-weight-black:   900 !default;
 
+$font-weight-base:    $font-weight-normal !default;
+
 // Colors
 // ----------------------------------------------------------------------------
 
 $text-color:     $gray-dark !default;
 $heading-color:  $gray-dark !default;
 
-// @todo: Vertical Rhythm
+// Vertical Rhythm
 // ----------------------------------------------------------------------------
 
-// Note: these don't do anything yet, but should duplicate much of the
-// functionality of the Compass mixins
-// @source: http://compass-style.org/reference/compass/typography/vertical_rhythm/#const-font-unit
+// $round-to-nearest-half-line: Allows the `type-scale` mixin and the `lines-
+// $for-font-size` function to round the line height to the nearest half line
+// $height instead of the nearest integral line height to avoid large spacing
+// $between lines.
+// $min-line-padding: Ensure there is at least this many pixels of vertical
+// $padding above and below the text.
 
-// $font-size-base:     16px;
-// $line-height-base:   24px;
-//
-
-
-// Allows the `adjust-font-size-to` mixin and the `lines-for-font-size` function
-// to round the line height to the nearest half line height instead of the
-// nearest integral line height to avoid large spacing between lines.
-$round-to-nearest-half-line:  true;
-
-// Ensure there is at least this many pixels
-// of vertical padding above and below the text.
-$min-line-padding:            true;
-
-// The basic unit of font rhythm.
-// 24px, 1.5em, 1.5rem
-// The same as line-height-computed.
-// $base-rhythm-unit: $line-height-base / $font-size-base * $font-unit;
-
-// The leader is the amount of whitespace in a line.
-// It might be useful in your calculations.
-$leader-base: ($line-height-base - $font-size-base) * $em-base / $font-size-base;
-$leader-half: $leader-base / 2;
-
+$round-to-nearest-half-line:  true !default;
+$min-line-padding:            2px !default;
 $default-border-style:        solid !default;
