--- a/assets/stylesheets/source/settings/_vertical-rhythm-ref.scss
+++ b/assets/stylesheets/source/settings/_vertical-rhythm-ref.scss
@@ -53,19 +53,19 @@
 //   @warn "$relative-font-sizing is true but $font-unit is set to #{$font-unit} which is not a relative unit.";
 // }
 
-// Establishes a font baseline for the given font-size.
-@mixin establish-baseline($font-size: $base-font-size) {
-  // IE 6 refuses to resize fonts set in pixels and it weirdly resizes fonts
-  // whose root is set in ems. So we set the root font size in percentages of
-  // the default font size.
-  * html {
-    font-size: 100% * ($font-size / $browser-default-font-size);
-  }
-  html {
-    font-size: $font-size;
-    @include adjust-leading-to(1, if($relative-font-sizing, $font-size, $base-font-size));
-  }
-}
+// // Establishes a font baseline for the given font-size.
+// @mixin establish-baseline($font-size: $base-font-size) {
+//   // IE 6 refuses to resize fonts set in pixels and it weirdly resizes fonts
+//   // whose root is set in ems. So we set the root font size in percentages of
+//   // the default font size.
+//   * html {
+//     font-size: 100% * ($font-size / $browser-default-font-size);
+//   }
+//   html {
+//     font-size: $font-size;
+//     @include adjust-leading-to(1, if($relative-font-sizing, $font-size, $base-font-size));
+//   }
+// }
 
 // // Resets the line-height to 1 vertical rhythm unit.
 // // Does not work on elements whose font-size is different from $base-font-size.
