--- a/assets/stylesheets/source/settings/mixins/_vertical-rhythm.scss
+++ b/assets/stylesheets/source/settings/mixins/_vertical-rhythm.scss
@@ -4,33 +4,37 @@
 // Author:     Compass
 // Source:     https://github.com/chriseppstein/compass/blob/stable/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss
 
+// Functions
+// ----------------------------------------------------------------------------
 
+// Calculate leading units to create a consistent vertical rhythm.
+// $lines: how many multiples of the baseline rhythm the text should use up.
+// $font-size: The size of the type you're working with
+// $offset: not sure?
 
-
-
-
-
-@mixin margin-leading($lines, $font-size) {
-  $unit: unit($font-size-base);
-  $value: ();
-
-  // for each of those numbers, we need to calculate what that is based on
-  // the font size of the element. If no font size is present, we can just use
-  // the base font size. I think for rem and px, you will never have to enter
-  // a font size.
-  @each $line in $lines {
-
+@function leading(
+  $lines: 1,
+  $font-size: $font-size-base,
+  $offset: 0
+) {
+  @if unit($font-size-base) == "px" and $font-size != $font-size-base {
+    @warn "$font-size-base is in pixels but a relative font size was passed to the rhythm function";
   }
 
-  margin: $value;
+  $leading: $font-size-base * ($lines * $line-height-base - $offset) / $font-size;
+
+  // Round the pixels down to nearest integer.
+  @if unit($leading) == px {
+    $leading: floor($leading);
+  }
+  @return $leading;
 }
 
+// Calculate the minimum multiple of rhythm units
+// needed to contain the font-size.
 
-
-
-
-// Calculate the minimum multiple of rhythm units needed to contain the font-size.
 @function lines-for-font-size($font-size) {
+  $font-size: strip-unit($font-size);
   $lines: if($round-to-nearest-half-line,
               ceil(2 * $font-size / $line-height-base) / 2,
               ceil($font-size / $line-height-base));
@@ -38,4 +42,119 @@
     $lines: $lines + if($round-to-nearest-half-line, 0.5, 1);
   }
   @return $lines;
+}
+
+
+// Mixins
+// ----------------------------------------------------------------------------
+
+// Calculate leading units for consistent vertical rhythm and automatically
+// create properties using this calculated value. Possible properties include:
+// margin, padding, line-height, height, width, max-height/width, etc.
+
+// You will need to include the $base param if the property is calculated from
+// the font's size (unitless line-heights, for example), or if your $font-size-
+// base unit is in ems or % (since those are both relative to the font size).
+
+@mixin leading(
+  $property,
+  $lines: 1,
+  $base: $font-size-base,
+  $offset: 0
+) {
+  @if absolute-unit($font-size-base) and $base != $font-size-base {
+    @warn "$font-size-base is in pixels but a relative font size was passed to the rhythm function";
+  }
+
+  // Unitless values
+  @if $property == 'line-height' {
+    line-height: leading($lines, $base, $offset);
+  }
+  @else {
+    $values: ();
+    @each $line in $lines {
+      // Here we need to make sure we are using the correct units (rem, em,
+      // etc.) since the rem() mixin expects values with units. This works for
+      // em and rem, but px needs to be multiplied
+      $leading: leading($line, $base, $offset);
+      $values: append($values, rel-to-px($leading));
+    }
+
+    @include rem-fallback($property, $values);
+  }
+}
+
+// Adjust a block to have a different font size and line height to maintain
+// vertical rhythm.
+// $font-size: (required): the size you want the text to end up.
+// $lines: how many multiples of the baseline rhythm the text should use up.
+// It defaults to the smallest integer large enough to fit the font.
+// $base: adjust from a font-size other than the base font-size (for ems).
+
+@mixin type-scale(
+  $font-size,
+  $lines: lines-for-font-size($font-size),
+  $base: $font-size-base
+) {
+
+  @if absolute_unit($font-size-base) and $base != $font-size-base {
+    @warn "$font-size-base is in pixels but a relative font size was passed to type-scale";
+  }
+
+  // Set font-size
+  @include rem-fallback(font-size, ($font-size-base * $font-size / $base), $base);
+
+  // Set line-height
+  @if absolute-unit($font-size-base) {
+    line-height: leading($lines, $font-size-base);
+  }
+  @else {
+    line-height: leading($lines, $font-size);
+  }
+}
+
+// Aliases and shortcuts
+// ----------------------------------------------------------------------------
+
+// We could use the leading mixin for margin and padding, but it will me much
+// easier to read our SASS if we use the aliases below.
+
+@mixin margin($lines: 1, $base: $font-size-base, $offset: 0) {
+  @include leading(margin, $lines, $base, $offset);
+}
+
+@mixin margin-top($lines: 1, $base: $font-size-base, $offset: 0) {
+  @include leading(margin-top, $lines, $base, $offset);
+}
+
+@mixin margin-right($lines: 1, $base: $font-size-base, $offset: 0) {
+  @include leading(margin-right, $lines, $base, $offset);
+}
+
+@mixin margin-left($lines: 1, $base: $font-size-base, $offset: 0) {
+  @include leading(margin-left, $lines, $base, $offset);
+}
+
+@mixin margin-bottom($lines: 1, $base: $font-size-base, $offset: 0) {
+  @include leading(margin-bottom, $lines, $base, $offset);
+}
+
+@mixin padding($lines: 1, $base: $font-size-base, $offset: 0) {
+  @include leading(padding, $lines, $base, $offset);
+}
+
+@mixin padding-top($lines: 1, $base: $font-size-base, $offset: 0) {
+  @include leading(padding-top, $lines, $base, $offset);
+}
+
+@mixin padding-right($lines: 1, $base: $font-size-base, $offset: 0) {
+  @include leading(padding-right, $lines, $base, $offset);
+}
+
+@mixin padding-left($lines: 1, $base: $font-size-base, $offset: 0) {
+  @include leading(padding-left, $lines, $base, $offset);
+}
+
+@mixin padding-bottom($lines: 1, $base: $font-size-base, $offset: 0) {
+  @include leading(padding-bottom, $lines, $base, $offset);
 }
